--- a/index.html
+++ b/index.html
@@ -49,7 +49,20 @@
 
   <!-- Rating state end -->
 
-  <!-- Thank you state start -->
+  <!-- Thank You State -->
+  <div class="thank-you hidden"> 
+    <div>
+      <img src="images/illustration-thank-you.svg" alt="success image">
+    </div>
+    <p class="rating">You selected <span class="selected-rating"></span> out of 5.</p>
+    <div>
+      <h1>Thank you!</h1>
+    </div>
+    <div class="thank-you-text">
+      
+      <p>We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to get in touch!</p>
+    </div>
+  </div>
 
   
 
